Call to Record#save method was removed.